feat: allow inclusions for tasks and groups too