@@ -25,6 +25,7 @@ import cloud.commandframework.annotations.specifier.Greedy;
 import cloud.commandframework.annotations.specifier.Quoted;
 import cloud.commandframework.annotations.suggestions.Suggestions;
 import cloud.commandframework.context.CommandContext;
+import com.google.common.base.Splitter;
 import eu.cloudnetservice.common.Nameable;
 import eu.cloudnetservice.common.WildcardUtil;
 import eu.cloudnetservice.common.collection.Pair;
@@ -53,7 +54,10 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
+import java.util.Objects;
 import java.util.Queue;
+import java.util.Set;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import lombok.NonNull;
 import org.jetbrains.annotations.Nullable;
@@ -65,6 +69,7 @@ public final class ServiceCommand {
 
   private static final Logger LOGGER = LogManager.logger(ServiceCommand.class);
   private static final DateFormat DATE_FORMAT = new SimpleDateFormat("dd.MM.yyyy HH:mm:ss");
+  private static final Splitter SEMICOLON_SPLITTER = Splitter.on(';').omitEmptyStrings().trimResults();
 
   // there are different ways to display the services
   private static final RowBasedFormatter<ServiceInfoSnapshot> NAMES_ONLY = RowBasedFormatter.<ServiceInfoSnapshot>builder()
@@ -83,6 +88,13 @@ public final class ServiceCommand {
 
   public ServiceCommand() {
     Node.instance().eventManager().registerListener(this);
+  }
+
+  public static @NonNull Collection<Pattern> parseDeploymentPatterns(@Nullable String input, boolean caseSensitive) {
+    return input == null ? Set.of() : SEMICOLON_SPLITTER.splitToStream(input)
+      .map(pattern -> WildcardUtil.fixPattern(pattern, caseSensitive))
+      .filter(Objects::nonNull)
+      .toList();
   }
 
   @Suggestions("service")
@@ -182,7 +194,8 @@ public final class ServiceCommand {
     @NonNull @Argument(value = "name") Collection<ServiceInfoSnapshot> services,
     @Nullable @Flag("template") ServiceTemplate template,
     @Nullable @Flag("excludes") @Quoted String excludes,
-    @Nullable @Flag("includes") @Quoted String includes
+    @Nullable @Flag("includes") @Quoted String includes,
+    @Flag("case-sensitive") boolean caseSensitive
   ) {
     // associate all services with a template
     Collection<Pair<SpecificCloudServiceProvider, ServiceTemplate>> targets = services.stream()
@@ -205,13 +218,15 @@ public final class ServiceCommand {
       source.sendMessage(I18n.trans("command-service-copy-no-default-template"));
       return;
     }
-    var parsedExcludes = this.parseExcludes(excludes);
-    var parsedIncludes = this.parseExcludes(includes);
+    // split on a semicolon and try to fix the patterns the user entered
+    var parsedExcludes = parseDeploymentPatterns(excludes, caseSensitive);
+    var parsedIncludes = parseDeploymentPatterns(includes, caseSensitive);
     for (var target : targets) {
       target.first().addServiceDeployment(ServiceDeployment.builder()
         .template(target.second())
         .excludes(parsedExcludes)
         .includes(parsedIncludes)
+        .withDefaultExclusions()
         .build());
       target.first().removeAndExecuteDeployments();
       // send a message for each service we did copy the template of
@@ -346,7 +361,7 @@ public final class ServiceCommand {
       return;
     }
 
-    Collection<String> list = new ArrayList<>(Arrays.asList(
+    Collection<String> list = new ArrayList<>(List.of(
       " ",
       "* CloudService: " + service.serviceId().uniqueId(),
       "* Name: " + service.serviceId().name(),
@@ -400,10 +415,9 @@ public final class ServiceCommand {
     list.add(" ");
     list.add("* ServiceInfoSnapshot | " + DATE_FORMAT.format(service.creationTime()));
 
-    list.addAll(Arrays.asList(
+    list.addAll(List.of(
       "PID: " + service.processSnapshot().pid(),
-      "CPU usage: " + CPUUsageResolver.FORMAT
-        .format(service.processSnapshot().cpuUsage()) + "%",
+      "CPU usage: " + CPUUsageResolver.FORMAT.format(service.processSnapshot().cpuUsage()) + "%",
       "Threads: " + service.processSnapshot().threads().size(),
       "Heap usage: " + (service.processSnapshot().heapUsageMemory() / 1048576) + "/" +
         (service.processSnapshot().maxHeapMemory() / 1048576) + "MB",
@@ -417,13 +431,5 @@ public final class ServiceCommand {
     }
 
     source.sendMessage(list);
-  }
-
-  private @NonNull Collection<String> parseExcludes(@Nullable String excludes) {
-    if (excludes == null) {
-      return List.of();
-    }
-
-    return List.of(excludes.split(";"));
   }
 }
